# wikitext_to_logseq

./: nicodranas.txt  pyproject.toml
src/: converter.py
tests/: test_converter.py
